Fixed profile image spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,4 +16,5 @@
 
 .img-circle {
     border-radius: 50%;
+    padding: 5%;
 }
